# misc

./: .gitmodules
ages/: a.out  efficient.py  fizz.c  fizz.py  simple.py
blackjack/cpp/: 22000games.txt  Makefile  auto  auto.cpp  main  main.cpp  manual  manual.cpp  practical.txt  tenMillionGames.txt  theory.txt
bulletTest/: main.cpp
cTests/: 3darray.c  3darray.cpp  a.c  a.out  a.txt  aRegister.h  adc.c  bits.c  cStr.c  clang.s  classes.cpp  cycleTimer.c  cycleTimer.s  dynamic.cpp  dynamicArray.c  for.cpp  friend.cpp  gcc.s  hash.c  ifelse.c  ifelse.s  isPalindrome.c  linkedList.cpp  loopTest.c  loopTest.py  mallocInConstruct.cpp  mallocStr.c  matMult.cpp  mem.c  nodes.c  optimise.c  optimise.s  perfTest.c  plusplus.c  plusplus.s  post.s  pre.s  print.c  printNo.c  pwd.c  (+21 more)
cTests/namespaces/: a.out
cTests/selfPrint/: a.out  templates.cpp
cTests/splitLines/: splitLines.c  splitLines.py  test.txt
cats/: main.cpp
contourFilling/: CMakeLists.txt  contourFilling.cpp
countdown/: countdown.py
install/: 45-usb-stlink-v2.rules  installScript.sh  part.sh  projectScript.sh
learnHaskell/functions/: baby.hs
opencv/: CMakeLists.txt  README.md
opencv/testProjects/colourTester/: CMakeLists.txt  README.md  colourTester.cpp
optimiseAssembly/: assembly.c  empty.s  full.s
perl/: a.pl  helloWorld.pl
professionalCpp/: a.out  cats.cpp  const.cpp  defCtorArray.cpp  except.cpp  for.cpp  inheritance.cpp  lvalue.cpp  range.cpp  ref.cpp  stackOrHeap.cpp  str.c  using.cpp
splitBill/: a.html  split.py
ttyecho/: ttyecho.c
verilog/: a.out  dFlip.v  hello  hello.v
(+414 files in other folders)
